<resources>
    <string name="app_name">Series Calendar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Series List</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="seriesbackground">seriesBackground</string>
    <string name="series_name_title">Series Name</string>
    <string name="latest_chapter_title">Latest Chapter</string>
    <string name="last_update_title">Last Updated in</string>
    <string name="series_list">Series List</string>
    <string name="fab_description">Add card button</string>
    <string name="tracked_series">Tracked Series</string>
    <string name="request_series_name">Series Name</string>
    <string name="input_serie_name">Field Name:</string>
    <string name="empty_text_input_field">_____________________</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="lastest_chapter_field">Last Chapter:</string>
    <string name="CreateSeriesActivity">Create Series Screen</string>
</resources>